A few fixes
- Map now centres on the middle of the UK rather than Leeds
- Text of the map Toolbar buttons and Dialog buttons can now be
configured if required
- Added "forceCentre" settings that overrides the map moving outwards to
show all custom landmarks
- Enhanced the "view" template to include an "addInfo" section where you
can add addition (HTML) information onto the points
that goes beyond the standard address - this appears at the
right-hand-side of the contact details (and photo if there is one)
- Added a bit of space between the contact info and the dialog buttons
as they looked a bit cramped.
- Mobile stylesheet hides the photo of the place - was taking too much
room
- Fixed line-height issue on toolbar buttons (looks for Google
line-height and uses that – seems to vary depending on the map size)
- Add some space between the photo and the “add-info” to give a bit of
room to breathe
- No whitespace wrapping on venue details (looked awful)
- A few more random style tweaks

--- a/examples/examples.css
+++ b/examples/examples.css
@@ -12,3 +12,8 @@ body {
 	margin: 20px;
 }
 
+
+.mapsed-add-info h4 {
+	margin: 0;
+	padding: 0;
+}
